[project]
name = "get-papers"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = [
    {name = "Ameer Sayyad", email = "ameersayyad12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.16.0,<0.17.0",
    "requests>=2.32.4,<3.0.0",
    "pandas>=2.3.1,<3.0.0",
    "streamlit (>=1.46.1,<2.0.0)"
]

[project.scripts]
get-papers-list = "get_papers.main:app"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
